TEST: add 2 tests -- getweakestcardifhidden and getstrogestcardifwinfirst